Added new email: reminder for unpaid rents

--- a/data/locale/fr.json
+++ b/data/locale/fr.json
@@ -1,6 +1,7 @@
 {
     "short_invoice": "Q",
     "short_rentcall": "A",
+    "short_rentcall_reminder": "A",
     "invoice": "Quittance",
     "rentcall": "Avis d'échéance"
 }
